Compiladores/CompilerTrabalhoGB/target/generated-sources/antlr4/GramaticaParser.java
// Generated from Gramatica.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T_PROGRAMA=1, T_INICIOCOMANDO=2, T_INTEIRO=3, T_BOOLV=4, T_BOOLF=5, T_NEGACAO=6, 
		T_LEIA=7, T_ENQUANTO=8, T_FACA=9, T_DIFERENCA=10, T_IGUAL=11, T_MENOR=12, 
		T_MAIOR=13, T_MAIORIGUAL=14, T_MULT=15, T_DIV=16, T_OU=17, T_E=18, T_MAIS=19, 
		T_MENOS=20, T_PROCEDIMENTO=21, T_SE=22, T_ENTAO=23, T_SENAO=24, T_ATRIBUICAO=25, 
		T_FUNCAO=26, T_BOOLEANO=27, T_FIMCOMANDO=28, T_PONTOEVIRGULA=29, T_FIM=30, 
		T_VAR=31, T_VIRGULA=32, T_DOISPONTOS=33, T_ABREPARENTESES=34, T_FECHAPARENTESES=35, 
		T_ESCREVA=36, T_UNDERLINE=37, T_DIGITO=38, T_LETRA=39, WS=40, COMMENT=41;
	public static final int
		RULE_prog = 0, RULE_bloco = 1, RULE_etDeclaracao_Variaveis = 2, RULE_declara_procedimento = 3, 
		RULE_declara_funcao = 4, RULE_declaracao_var = 5, RULE_tipo = 6, RULE_etsub_rotina = 7, 
		RULE_comandos = 8, RULE_comando = 9, RULE_atribuicao_chprocedimento = 10, 
		RULE_comando_atribuicao = 11, RULE_chamada_procedimento = 12, RULE_comando_condicional = 13, 
		RULE_comando_enquanto = 14, RULE_comando_leia = 15, RULE_comando_escreva = 16, 
		RULE_expressao = 17, RULE_operador_relacional = 18, RULE_expressao_simples = 19, 
		RULE_termo = 20, RULE_fator = 21, RULE_variavel = 22, RULE_chamada_funcao = 23, 
		RULE_identificador = 24, RULE_numero = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "bloco", "etDeclaracao_Variaveis", "declara_procedimento", "declara_funcao", 
			"declaracao_var", "tipo", "etsub_rotina", "comandos", "comando", "atribuicao_chprocedimento", 
			"comando_atribuicao", "chamada_procedimento", "comando_condicional", 
			"comando_enquanto", "comando_leia", "comando_escreva", "expressao", "operador_relacional", 
			"expressao_simples", "termo", "fator", "variavel", "chamada_funcao", 
			"identificador", "numero"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'inicio'", "'inteiro'", "'verdadeiro'", "'falso'", 
			"'nao'", "'leia'", "'enquanto'", "'faca'", "'<>'", "'='", "'<'", "'>'", 
			"'>='", "'*'", "'div'", "'ou'", "'e'", "'+'", "'-'", "'procedimento'", 
			"'se'", "'entao'", "'senao'", "':='", "'funcao'", "'booleano'", "'fim'", 
			"';'", "'fim.'", "'var'", "','", "'.'", "'('", "')'", "'escreva'", "'_'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "T_PROGRAMA", "T_INICIOCOMANDO", "T_INTEIRO", "T_BOOLV", "T_BOOLF", 
			"T_NEGACAO", "T_LEIA", "T_ENQUANTO", "T_FACA", "T_DIFERENCA", "T_IGUAL", 
			"T_MENOR", "T_MAIOR", "T_MAIORIGUAL", "T_MULT", "T_DIV", "T_OU", "T_E", 
			"T_MAIS", "T_MENOS", "T_PROCEDIMENTO", "T_SE", "T_ENTAO", "T_SENAO", 
			"T_ATRIBUICAO", "T_FUNCAO", "T_BOOLEANO", "T_FIMCOMANDO", "T_PONTOEVIRGULA", 
			"T_FIM", "T_VAR", "T_VIRGULA", "T_DOISPONTOS", "T_ABREPARENTESES", "T_FECHAPARENTESES", 
			"T_ESCREVA", "T_UNDERLINE", "T_DIGITO", "T_LETRA", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode T_PROGRAMA() { return getToken(GramaticaParser.T_PROGRAMA, 0); }
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public TerminalNode T_PONTOEVIRGULA() { return getToken(GramaticaParser.T_PONTOEVIRGULA, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode T_FIM() { return getToken(GramaticaParser.T_FIM, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T_PROGRAMA);
			setState(53);
			identificador();
			setState(54);
			match(T_PONTOEVIRGULA);
			setState(55);
			bloco();
			setState(56);
			match(T_FIM);
			 System.out.println("PASSOU"); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public List<EtDeclaracao_VariaveisContext> etDeclaracao_Variaveis() {
			return getRuleContexts(EtDeclaracao_VariaveisContext.class);
		}
		public EtDeclaracao_VariaveisContext etDeclaracao_Variaveis(int i) {
			return getRuleContext(EtDeclaracao_VariaveisContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T_VAR) {
				{
				{
				setState(59);
				etDeclaracao_Variaveis();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			comandos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EtDeclaracao_VariaveisContext extends ParserRuleContext {
		public TerminalNode T_VAR() { return getToken(GramaticaParser.T_VAR, 0); }
		public List<Declaracao_varContext> declaracao_var() {
			return getRuleContexts(Declaracao_varContext.class);
		}
		public Declaracao_varContext declaracao_var(int i) {
			return getRuleContext(Declaracao_varContext.class,i);
		}
		public List<TerminalNode> T_PONTOEVIRGULA() { return getTokens(GramaticaParser.T_PONTOEVIRGULA); }
		public TerminalNode T_PONTOEVIRGULA(int i) {
			return getToken(GramaticaParser.T_PONTOEVIRGULA, i);
		}
		public EtDeclaracao_VariaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etDeclaracao_Variaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterEtDeclaracao_Variaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitEtDeclaracao_Variaveis(this);
		}
	}

	public final EtDeclaracao_VariaveisContext etDeclaracao_Variaveis() throws RecognitionException {
		EtDeclaracao_VariaveisContext _localctx = new EtDeclaracao_VariaveisContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_etDeclaracao_Variaveis);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T_VAR);
			setState(68);
			declaracao_var();
			setState(69);
			match(T_PONTOEVIRGULA);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T_LETRA) {
				{
				{
				setState(70);
				declaracao_var();
				setState(71);
				match(T_PONTOEVIRGULA);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T_PONTOEVIRGULA) {
				{
				setState(78);
				match(T_PONTOEVIRGULA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declara_procedimentoContext extends ParserRuleContext {
		public TerminalNode T_PROCEDIMENTO() { return getToken(GramaticaParser.T_PROCEDIMENTO, 0); }
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public TerminalNode T_PONTOEVIRGULA() { return getToken(GramaticaParser.T_PONTOEVIRGULA, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public Declara_procedimentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declara_procedimento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDeclara_procedimento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDeclara_procedimento(this);
		}
	}

	public final Declara_procedimentoContext declara_procedimento() throws RecognitionException {
		Declara_procedimentoContext _localctx = new Declara_procedimentoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declara_procedimento);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T_PROCEDIMENTO);
			setState(82);
			identificador();
			setState(83);
			match(T_PONTOEVIRGULA);
			setState(84);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declara_funcaoContext extends ParserRuleContext {
		public TerminalNode T_FUNCAO() { return getToken(GramaticaParser.T_FUNCAO, 0); }
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public TerminalNode T_DOISPONTOS() { return getToken(GramaticaParser.T_DOISPONTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode T_PONTOEVIRGULA() { return getToken(GramaticaParser.T_PONTOEVIRGULA, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public Declara_funcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declara_funcao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDeclara_funcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDeclara_funcao(this);
		}
	}

	public final Declara_funcaoContext declara_funcao() throws RecognitionException {
		Declara_funcaoContext _localctx = new Declara_funcaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declara_funcao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T_FUNCAO);
			setState(87);
			identificador();
			setState(88);
			match(T_DOISPONTOS);
			setState(89);
			tipo();
			setState(90);
			match(T_PONTOEVIRGULA);
			setState(91);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_varContext extends ParserRuleContext {
		public List<IdentificadorContext> identificador() {
			return getRuleContexts(IdentificadorContext.class);
		}
		public IdentificadorContext identificador(int i) {
			return getRuleContext(IdentificadorContext.class,i);
		}
		public TerminalNode T_DOISPONTOS() { return getToken(GramaticaParser.T_DOISPONTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<TerminalNode> T_VIRGULA() { return getTokens(GramaticaParser.T_VIRGULA); }
		public TerminalNode T_VIRGULA(int i) {
			return getToken(GramaticaParser.T_VIRGULA, i);
		}
		public Declaracao_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDeclaracao_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDeclaracao_var(this);
		}
	}

	public final Declaracao_varContext declaracao_var() throws RecognitionException {
		Declaracao_varContext _localctx = new Declaracao_varContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracao_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			identificador();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T_VIRGULA) {
				{
				{
				setState(94);
				match(T_VIRGULA);
				setState(95);
				identificador();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(T_DOISPONTOS);
			setState(102);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TerminalNode T_INTEIRO() { return getToken(GramaticaParser.T_INTEIRO, 0); }
		public TerminalNode T_BOOLEANO() { return getToken(GramaticaParser.T_BOOLEANO, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if ( !(_la==T_INTEIRO || _la==T_BOOLEANO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Etsub_rotinaContext extends ParserRuleContext {
		public List<Declara_procedimentoContext> declara_procedimento() {
			return getRuleContexts(Declara_procedimentoContext.class);
		}
		public Declara_procedimentoContext declara_procedimento(int i) {
			return getRuleContext(Declara_procedimentoContext.class,i);
		}
		public List<TerminalNode> T_PONTOEVIRGULA() { return getTokens(GramaticaParser.T_PONTOEVIRGULA); }
		public TerminalNode T_PONTOEVIRGULA(int i) {
			return getToken(GramaticaParser.T_PONTOEVIRGULA, i);
		}
		public List<Declara_funcaoContext> declara_funcao() {
			return getRuleContexts(Declara_funcaoContext.class);
		}
		public Declara_funcaoContext declara_funcao(int i) {
			return getRuleContext(Declara_funcaoContext.class,i);
		}
		public Etsub_rotinaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etsub_rotina; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterEtsub_rotina(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitEtsub_rotina(this);
		}
	}

	public final Etsub_rotinaContext etsub_rotina() throws RecognitionException {
		Etsub_rotinaContext _localctx = new Etsub_rotinaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_etsub_rotina);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T_PROCEDIMENTO:
				{
				setState(106);
				declara_procedimento();
				setState(107);
				match(T_PONTOEVIRGULA);
				}
				break;
			case T_FUNCAO:
				{
				setState(109);
				declara_funcao();
				setState(110);
				match(T_PONTOEVIRGULA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T_PROCEDIMENTO || _la==T_FUNCAO) {
				{
				setState(120);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T_PROCEDIMENTO:
					{
					setState(114);
					declara_procedimento();
					setState(115);
					match(T_PONTOEVIRGULA);
					}
					break;
				case T_FUNCAO:
					{
					setState(117);
					declara_funcao();
					setState(118);
					match(T_PONTOEVIRGULA);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosContext extends ParserRuleContext {
		public TerminalNode T_INICIOCOMANDO() { return getToken(GramaticaParser.T_INICIOCOMANDO, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<TerminalNode> T_PONTOEVIRGULA() { return getTokens(GramaticaParser.T_PONTOEVIRGULA); }
		public TerminalNode T_PONTOEVIRGULA(int i) {
			return getToken(GramaticaParser.T_PONTOEVIRGULA, i);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitComandos(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comandos);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T_INICIOCOMANDO);
			setState(126);
			comando();
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(127);
					match(T_PONTOEVIRGULA);
					setState(128);
					comando();
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(134);
				match(T_PONTOEVIRGULA);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public Comando_escrevaContext comando_escreva() {
			return getRuleContext(Comando_escrevaContext.class,0);
		}
		public Comando_condicionalContext comando_condicional() {
			return getRuleContext(Comando_condicionalContext.class,0);
		}
		public Comando_enquantoContext comando_enquanto() {
			return getRuleContext(Comando_enquantoContext.class,0);
		}
		public Comando_leiaContext comando_leia() {
			return getRuleContext(Comando_leiaContext.class,0);
		}
		public Atribuicao_chprocedimentoContext atribuicao_chprocedimento() {
			return getRuleContext(Atribuicao_chprocedimentoContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitComando(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comando);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T_ESCREVA:
				{
				setState(137);
				comando_escreva();
				}
				break;
			case T_SE:
				{
				setState(138);
				comando_condicional();
				}
				break;
			case T_ENQUANTO:
				{
				setState(139);
				comando_enquanto();
				}
				break;
			case T_LEIA:
				{
				setState(140);
				comando_leia();
				}
				break;
			case T_LETRA:
				{
				setState(141);
				atribuicao_chprocedimento();
				}
				break;
			case T_INICIOCOMANDO:
				{
				setState(142);
				comandos();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atribuicao_chprocedimentoContext extends ParserRuleContext {
		public Comando_atribuicaoContext comando_atribuicao() {
			return getRuleContext(Comando_atribuicaoContext.class,0);
		}
		public Chamada_procedimentoContext chamada_procedimento() {
			return getRuleContext(Chamada_procedimentoContext.class,0);
		}
		public Atribuicao_chprocedimentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao_chprocedimento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterAtribuicao_chprocedimento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitAtribuicao_chprocedimento(this);
		}
	}

	public final Atribuicao_chprocedimentoContext atribuicao_chprocedimento() throws RecognitionException {
		Atribuicao_chprocedimentoContext _localctx = new Atribuicao_chprocedimentoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_atribuicao_chprocedimento);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(145);
				comando_atribuicao();
				}
				break;
			case 2:
				{
				setState(146);
				chamada_procedimento();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comando_atribuicaoContext extends ParserRuleContext {
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public TerminalNode T_ATRIBUICAO() { return getToken(GramaticaParser.T_ATRIBUICAO, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public Comando_atribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterComando_atribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitComando_atribuicao(this);
		}
	}
